fix: increase max-height of hero card for better visibility on smaller screens

--- a/src/components/heroCard/index.scss
+++ b/src/components/heroCard/index.scss
@@ -31,7 +31,7 @@
         top: 3em;
         right: initial;
         max-width: 100%;
-        max-height: 470px;
+        max-height: 500px;
 
         .title-container {
             gap: 1rem;
